--- a/package.json
+++ b/package.json
@@ -8,10 +8,14 @@
   "license": "MIT",
   "devDependencies": {
     "@types/node": "^7.0.18",
+    "chai": "^3.5.0",
     "electron-api-docs": "^1.6.2",
     "electron-docs": "^3.0.0",
     "flat": "^2.0.1",
+    "mocha": "^3.3.0",
     "ora": "^1.2.0",
+    "standard": "^10.0.2",
+    "standard-markdown": "^2.3.0",
     "ts-node": "^3.0.4",
     "typescript": "^2.3.2"
   },
