--- a/package.json
+++ b/package.json
@@ -7,9 +7,6 @@
   "author": "zeke",
   "license": "MIT",
   "devDependencies": {
-    "@types/chai": "^3.5.2",
-    "@types/mocha": "^2.2.41",
-    "@types/node": "^7.0.18",
     "chai": "^3.5.0",
     "del": "^2.2.2",
     "electron-docs": "^3.0.1",
@@ -23,13 +20,11 @@
     "shake-tree": "^1.0.0",
     "standard": "^10.0.2",
     "standard-markdown": "^2.3.0",
-    "ts-node": "^3.0.4",
-    "typescript": "^2.3.2",
     "walk-sync": "^0.3.1"
   },
   "scripts": {
-    "build": "script/build.ts",
-    "test": "mocha -r ts-node/register test/**/*.ts",
+    "build": "script/build.js",
+    "test": "mocha",
     "release": "script/release.sh"
   },
   "engines": {
