--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "chai": "^3.5.0",
     "del": "^2.2.2",
     "dotenv-safe": "^4.0.4",
-    "electron-docs": "^3.0.1",
+    "electron-docs": "^3.0.2",
+    "github": "^9.2.0",
     "got": "^6.7.1",
     "js-yaml": "^3.8.4",
     "json": "^9.0.6",
