--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "del": "^2.2.2",
     "dotenv-safe": "^4.0.4",
     "electron-docs": "^3.0.2",
+    "flat": "^2.0.1",
     "github": "^9.2.0",
     "got": "^6.7.1",
     "js-yaml": "^3.8.4",
