--- a/package.json
+++ b/package.json
@@ -6,19 +6,23 @@
   "repository": "https://github.com/electron/electron-i18n",
   "author": "zeke",
   "license": "MIT",
+  "dependencies": {
+    "flat": "^2.0.1",
+    "lodash": "^4.17.4",
+    "objectify-array": "^1.0.1",
+    "require-yml": "^1.3.1"
+  },
   "devDependencies": {
     "chai": "^3.5.0",
     "del": "^2.2.2",
     "dotenv-safe": "^4.0.4",
     "electron-docs": "^3.0.2",
-    "flat": "^2.0.1",
     "github": "^9.2.0",
     "got": "^6.7.1",
     "js-yaml": "^3.8.4",
     "json": "^9.0.6",
     "make-dir": "^1.0.0",
     "mocha": "^3.3.0",
-    "objectify-array": "^1.0.1",
     "ora": "^1.2.0",
     "shake-tree": "^1.1.0",
     "standard": "^10.0.2",
